- 컨텐츠 영역 기본 css 작업 중

--- a/assets/lib/css/less/layout.less
+++ b/assets/lib/css/less/layout.less
@@ -2334,10 +2334,10 @@
 	//coming soon
 	.ready_content {
 		padding:220px 0 170px; text-align:center;
-		i {font-size:40px; color:#bbb;}
+		i {font-size:40px; color:#ddd;}
 		p {
 			line-height:30px; margin-top:10px;
-			.font-tit; font-size:24px; color:#bbb;
+			.font-tit; font-size:24px; color:#ddd;
 		}
 	}
 	@media(max-width:@screen-sm-max){
