--- a/ukncs/css/uk.css
+++ b/ukncs/css/uk.css
@@ -114,10 +114,13 @@ etc
 .ukbody ul li > strong{font-weight:700;line-height:24px;}
 .ukbody ul li > strong + code{display:inline-block;margin:0;padding:0;background-color:#f5f5f5;border:0;line-height:inherit;font-weight:400;}
 .ukbody ul li p{margin:2px 0;padding:5px;background-color:#f5f5f5;line-height:24px;}
-.ukbody figure{margin:15px 0;border:2px solid #ddd;background:#fff;text-align:center;}
+.ukbody figure{margin:15px auto 24px auto;border:2px solid #ddd;background:#fff;text-align:center;}
 .ukbody figure img{max-width:100%;min-width:240px;}
+.ukbody figure img[src*=".svg"]{max-width:600px;}
 .ukbody figure pre{margin-top:0;margin-bottom:0;}
 .ukbody figcaption{padding:10px;background:#fff;text-align:center;}
+.ukbody figure .framebox{position:relative;left:0;width:100%;height:0;padding-bottom:56.25%;}
+.ukbody figure iframe{position:absolute;top:0;left:0;width:100%;height:100%;border:0;}
 .ukbody pre{position:relative;margin:2px -2px;padding:15px;padding-left:25px;border-right:2px solid #ddd;background:#eee;color:#222;text-align:left;vertical-align:middle;}
 .ukbody pre::before{content:"";display:block;position:absolute;top:0;left:0;width:5px;height:100%;background:#3d7e9a;}
 .ukbody pre code{overflow-x:auto;display:block;margin:0;margin-top:-20px;padding:0;border:0;color:inherit;line-height:24px;text-align:left;vertical-align:middle;}
