--- a/assets/lib/css/less/common.less
+++ b/assets/lib/css/less/common.less
@@ -638,7 +638,7 @@ input[type="range"] {
 	.CodeMirror-sizer {padding-bottom:8px !important;}
 	.CodeMirror-simplescroll-horizontal,
 	.CodeMirror-simplescroll-vertical {
-		bottom:3px; right:3px; border-radius:100px;
+		bottom:3px; right:3px; z-index:4; border-radius:100px;
 	}
 	.CodeMirror-simplescroll-horizontal {transform:scale(.99, 1);}
 	.CodeMirror-simplescroll-vertical {transform:scale(1, .99);}
