--- a/assets/lib/css/uk.css
+++ b/assets/lib/css/uk.css
@@ -1312,9 +1312,12 @@ input[type="range"]::-ms-thumb {
 }
 .uk_editor[data-theme="default"] .CodeMirror-simplescroll-horizontal div,
 .uk_editor[data-theme="default"] .CodeMirror-simplescroll-vertical div {
-  background: #bbb;
+  background: rgba(0, 0, 0, 0.15);
 }
 @media (max-width: 1201px) {
+  .uk_editor {
+    border-width: 2px;
+  }
   .uk_editor[data-result="true"] .code_wrap,
   .uk_editor[data-result="true"] .result_wrap {
     width: auto;
@@ -5791,6 +5794,9 @@ body {
   background-image: url('https://cdnjs.cloudflare.com/ajax/libs/browser-logos/58.1.3/archive/safari_1-7/safari_1-7_48x48.png');
 }
 @media (max-width: 767px) {
+  .browser_support {
+    border-width: 2px;
+  }
   .browser_support:before {
     font-size: 13px;
   }
@@ -5845,6 +5851,16 @@ body {
 .reference a:hover {
   color: #1e73ff;
 }
+@media (max-width: 767px) {
+  .reference_box {
+    margin-top: 30px;
+  }
+  .reference_box .link_lst {
+    margin-top: -14px;
+    padding: 20px 15px;
+    border-width: 2px;
+  }
+}
 .mt_lm {
   margin-top: 50px;
 }
@@ -5872,6 +5888,9 @@ body {
 @media (max-width: 767px) {
   .indent {
     margin-left: 8px;
+  }
+  .mt_lm {
+    margin-top: 30px;
   }
 }
 .ready_content {
