- 기본 레이아웃 스크립트 수정 및 uk_editor 수정

--- a/assets/lib/css/less/layout.less
+++ b/assets/lib/css/less/layout.less
@@ -1852,7 +1852,7 @@
 			ul.fixed {
 				position:fixed; left:auto; right:@pc_padding + 4px; top:@hdHeight; z-index:4;
 				padding:0 5px;
-				box-shadow:0 0 0 4px #e9e9e9; //rgba(0,0,0,.1)
+				box-shadow:0 0 0 4px #e9e9e9;
 				&.opacity_on {opacity:0;}
 				&:before {
 					display:none;
